--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,9 @@
 <resources>
     <string name="app_name">Demo0505</string>
-    <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="tv_mh">$  /  hr</string>
+    <string name="tv_salary">$</string>
+    <string name="tv_day">HR</string>
+    <string name="tv_salary2">薪資:</string>
+    <string name="tv_day2">時數:</string>
 </resources>
